modules/grammars/environment/src/test/resources/cocos/invalid/NoCommandChaining.ec
PACKAGE invalid

DOCKERFILE NoCommandChaining

RUN ["echo", "Hallo", "&&", "echo", "World"]
RUN "echo Hello && echo World"